 Bug 1302713 - Reduce the amount of false positive in the refresh driver warnings. r=mchang