layout/base/nsRefreshDriver.cpp
@@ -2062,14 +2062,14 @@ nsRefreshDriver::IsWaitingForPaint(mozilla::TimeStamp aTime)
     return false;
   }
 
-  if (aTime > (mMostRecentTick + TimeDuration::FromMilliseconds(mWarningThreshold * 1000))) {
-    gfxCriticalNote << "Refresh driver waiting for the compositor for"
-                    << (aTime - mMostRecentTick).ToSeconds()
-                    << " seconds.";
-    mWarningThreshold *= 2;
-  }
-
   if (mWaitingForTransaction) {
+    if (mSkippedPaints && aTime > (mMostRecentTick + TimeDuration::FromMilliseconds(mWarningThreshold * 1000))) {
+      gfxCriticalNote << "Refresh driver waiting for the compositor for "
+                      << (aTime - mMostRecentTick).ToSeconds()
+                      << " seconds.";
+      mWarningThreshold *= 2;
+    }
+
     mSkippedPaints = true;
     return true;
   }
